# wispnook-server

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  check_deployment.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: new-feature.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 202501010000_initial.py
docker/: create-topics.sh  entrypoint.sh
postman/: POSTMAN_GUIDE.md  postman_collection.json  postman_environment.json
specs/: spec-driven-workflow.md  template.md
src/app/: main.py
src/app/api/routes/: auth.py  comments.py  feed.py  follows.py  health.py  posts.py  users.py
src/app/auth/: security.py
src/app/cache/: redis_client.py
src/app/config/: settings.py
src/app/db/: session.py
src/app/domain/events/: schemas.py
src/app/domain/models/: __init__.py  base.py  user.py
src/app/domain/schemas/: __init__.py  auth.py  comments.py  feed.py  posts.py  users.py
src/app/events/: consumer.py  dispatcher.py  producer.py
src/app/observability/: logging.py  metrics.py  tracing.py
src/app/rate_limit/: dependency.py
src/app/repositories/: base.py  comments.py  follows.py  likes.py  outbox.py  posts.py  users.py
src/app/services/: auth_service.py  comment_service.py  feed_service.py  follow_service.py  post_service.py  user_service.py
src/app/utils/: exceptions.py
tests/: conftest.py
tests/contracts/: test_event_schemas.py
tests/integration/: test_api_smoke.py  test_auth_flow.py
tests/unit/: test_cache.py  test_rate_limiter.py  test_security.py  test_services.py  test_utils.py
